# DERMO

./: .gitignore  Cargo.toml  build-release.sh  build.rs  rusefi_wideband_can_protocol.md
.cursor/rules/: version-bump.mdc
docs/: BOOTCOMMANDER.md  CSV_STREAMING_ANALYSIS.md
patches/: README.md  openblt-darwin.patch
scripts/: build-bootcommander.sh  build-macos-app.sh
src/: logging.rs  main.rs
src/core/: message.rs  mod.rs
src/decode/: decoder.rs
src/hardware/: mock.rs  serial_can.rs
src/input/: cabana.rs  csv.rs  mod.rs
src/playback/: engine.rs
src/plugins/: bench.rs  gdi.rs  isotp.rs  mod.rs  uds_diag.rs  uds_security.rs  wideband.rs
src/ui/: bit_visualizer.rs  dialogs.rs  log_window.rs  mod.rs  multi_graph.rs  shortcuts.rs  statistics.rs  windows.rs
