[package]
name = "dermo"
version = "0.1.63"
edition = "2021"
description = "Data Extraction and Real-Time Message Observer"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "default_layout.ini"]

[dependencies]
# imgui and backends
imgui = { version = "0.12", features = ["docking"] }
imgui-winit-support = "0.12"
imgui-glow-renderer = "0.12"
glutin = "0.31"
glutin-winit = "0.4"
winit = "0.29"
glow = "0.13"
raw-window-handle = "0.5"

# async runtime
tokio = { version = "1.40", features = ["full"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Hardware interfaces
tokio-serial = "5.4"
async-trait = "0.1"

# File dialogs
rfd = "0.15"

# error handling
anyhow = "1.0"
thiserror = "2.0"

# UDS Security Key (RSA + MD5)
num-bigint = "0.4"
num-traits = "0.2"
md5 = "0.7"

# utilities
chrono = { version = "0.4", features = ["serde"] }
bzip2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.3", optional = true }

[features]
default = []
socketcan = ["dep:socketcan"]

[build-dependencies]
